--- a/packages/mosaico/templates/versafix-1/template-versafix-1.html
+++ b/packages/mosaico/templates/versafix-1/template-versafix-1.html
@@ -566,9 +566,9 @@
                         <td valign="top">
                           <table cellpadding="0" border="0" align="left" cellspacing="0" class="mobile-full" style="padding-top: 4px">
                             <tr>
-                              <td width="auto" valign="middle" bgcolor="#bfbfbf" align="center" height="26" 
+                              <td width="auto" valign="middle" bgcolor="#1a3867" align="center" height="26" 
                                 style="font-size: 13px; font-family: Arial, Helvetica, sans-serif; text-align:center; color: #3f3f3f; font-weight: normal;
-                                padding-left: 18px; padding-right: 18px; background-color: #bfbfbf; border-radius: 4px;
+                                padding-left: 18px; padding-right: 18px; background-color: #1a3867; border-radius: 4px;
                                 -ko-border-radius: @[buttonStyle.radius]px;
                                 -ko-attr-bgcolor: @buttonStyle.buttonColor; -ko-background-color: @buttonStyle.buttonColor;
                                 -ko-font-size: @[buttonStyle.size]px; -ko-font-family: @buttonStyle.face; -ko-color: @buttonStyle.color;">
@@ -659,9 +659,9 @@
               <td valign="top">
                 <table cellpadding="0" border="0" align="left" cellspacing="0" class="mobile-full">
                   <tr>
-                    <td width="auto" valign="middle" bgcolor="#bfbfbf" align="center" height="26" 
+                    <td width="auto" valign="middle" bgcolor="#1a3867" align="center" height="26" 
                       style="font-size: 13px; font-family: Arial, Helvetica, sans-serif; text-align:center; color: #3f3f3f; font-weight: normal;
-                      padding-left: 18px; padding-right: 18px; background-color: #bfbfbf; border-radius: 4px;
+                      padding-left: 18px; padding-right: 18px; background-color: #1a3867; border-radius: 4px;
                       -ko-border-radius: @[buttonStyle.radius]px;
                       -ko-attr-bgcolor: @buttonStyle.buttonColor; -ko-background-color: @buttonStyle.buttonColor;
                       -ko-font-size: @[buttonStyle.size]px; -ko-font-family: @buttonStyle.face; -ko-color: @buttonStyle.color; ">
@@ -782,9 +782,9 @@
                         <td valign="top">
                           <table cellpadding="0" border="0" align="left" cellspacing="0" class="mobile-full" style="padding-top: 4px">
                             <tr>
-                              <td width="auto" valign="middle" bgcolor="#bfbfbf" align="center" height="26" 
+                              <td width="auto" valign="middle" bgcolor="#1a3867" align="center" height="26" 
                                 style="font-size: 13px; font-family: Arial, Helvetica, sans-serif; text-align:center; color: #3f3f3f; font-weight: normal;
-                                padding-left: 18px; padding-right: 18px; background-color: #bfbfbf; border-radius: 4px;
+                                padding-left: 18px; padding-right: 18px; background-color: #1a3867; border-radius: 4px;
                                 -ko-border-radius: @[buttonStyle.radius]px;
                                 -ko-attr-bgcolor: @buttonStyle.buttonColor; -ko-background-color: @buttonStyle.buttonColor;
                                 -ko-font-size: @[buttonStyle.size]px; -ko-font-family: @buttonStyle.face; -ko-color: @buttonStyle.color; ">
@@ -831,9 +831,9 @@
                         <td valign="top">
                           <table cellpadding="0" border="0" align="left" cellspacing="0" class="mobile-full" style="padding-top: 4px">
                             <tr>
-                              <td width="auto" valign="middle" bgcolor="#bfbfbf" align="center" height="26" 
+                              <td width="auto" valign="middle" bgcolor="#1a3867" align="center" height="26" 
                                 style="font-size: 13px; font-family: Arial, Helvetica, sans-serif; text-align:center; color: #3f3f3f; font-weight: normal;
-                                padding-left: 18px; padding-right: 18px; background-color: #bfbfbf; border-radius: 4px;
+                                padding-left: 18px; padding-right: 18px; background-color: #1a3867; border-radius: 4px;
                                 -ko-border-radius: @[buttonStyle.radius]px;
                                 -ko-attr-bgcolor: @buttonStyle.buttonColor; -ko-background-color: @buttonStyle.buttonColor;
                                 -ko-font-size: @[buttonStyle.size]px; -ko-font-family: @buttonStyle.face; -ko-color: @buttonStyle.color; ">
@@ -880,9 +880,9 @@
                         <td valign="top">
                           <table cellpadding="0" border="0" align="left" cellspacing="0" class="mobile-full" style="padding-top: 4px">
                             <tr>
-                              <td width="auto" valign="middle" bgcolor="#bfbfbf" align="center" height="26" 
+                              <td width="auto" valign="middle" bgcolor="#1a3867" align="center" height="26" 
                                 style="font-size: 13px; font-family: Arial, Helvetica, sans-serif; text-align:center; color: #3f3f3f; font-weight: normal;
-                                padding-left: 18px; padding-right: 18px; background-color: #bfbfbf; border-radius: 4px;
+                                padding-left: 18px; padding-right: 18px; background-color: #1a3867; border-radius: 4px;
                                 -ko-border-radius: @[buttonStyle.radius]px;
                                 -ko-attr-bgcolor: @buttonStyle.buttonColor; -ko-background-color: @buttonStyle.buttonColor;
                                 -ko-font-size: @[buttonStyle.size]px; -ko-font-family: @buttonStyle.face; -ko-color: @buttonStyle.color;">
@@ -957,9 +957,9 @@
                         <td valign="top">
                           <table cellpadding="0" border="0" align="left" cellspacing="0" class="mobile-full" style="padding-top: 4px;">
                             <tr>
-                              <td width="auto" valign="middle" bgcolor="#bfbfbf" align="center" height="26" 
+                              <td width="auto" valign="middle" bgcolor="#1a3867" align="center" height="26" 
                                 style="font-size: 13px; font-family: Arial, Helvetica, sans-serif; text-align:center; color: #3f3f3f; font-weight: normal;
-                                padding-left: 18px; padding-right: 18px; background-color: #bfbfbf; border-radius: 4px;
+                                padding-left: 18px; padding-right: 18px; background-color: #1a3867; border-radius: 4px;
                                 -ko-border-radius: @[buttonStyle.radius]px;
                                 -ko-attr-bgcolor: @buttonStyle.buttonColor; -ko-background-color: @buttonStyle.buttonColor;
                                 -ko-font-size: @[buttonStyle.size]px; -ko-font-family: @buttonStyle.face; -ko-color: @buttonStyle.color; ">
@@ -1006,9 +1006,9 @@
                         <td valign="top">
                           <table cellpadding="0" border="0" align="left" cellspacing="0" class="mobile-full" style="padding-top: 4px;">
                             <tr>
-                              <td width="auto" valign="middle" bgcolor="#bfbfbf" align="center" height="26" 
+                              <td width="auto" valign="middle" bgcolor="#1a3867" align="center" height="26" 
                                 style="font-size: 13px; font-family: Arial, Helvetica, sans-serif; text-align:center; color: #3f3f3f; font-weight: normal;
-                                padding-left: 18px; padding-right: 18px; background-color: #bfbfbf; border-radius: 4px;
+                                padding-left: 18px; padding-right: 18px; background-color: #1a3867; border-radius: 4px;
                                 -ko-border-radius: @[buttonStyle.radius]px;
                                 -ko-attr-bgcolor: @buttonStyle.buttonColor; -ko-background-color: @buttonStyle.buttonColor;
                                 -ko-font-size: @[buttonStyle.size]px; -ko-font-family: @buttonStyle.face; -ko-color: @buttonStyle.color; ">
@@ -1083,9 +1083,9 @@
 
               <table cellpadding="0" border="0" align="center" cellspacing="0" class="mobile-full">
                 <tr>
-                  <td width="auto" valign="middle" bgcolor="#bfbfbf" align="center" height="50" 
+                  <td width="auto" valign="middle" bgcolor="#1a3867" align="center" height="50" 
                     style="font-size:22px; font-family: Arial, Helvetica, sans-serif; color: #3f3f3f; font-weight: normal;
-                    padding-left: 14px; padding-right: 14px; background-color: #bfbfbf; border-radius: 4px;
+                    padding-left: 14px; padding-right: 14px; background-color: #1a3867; border-radius: 4px;
                     -ko-attr-bgcolor: @bigButtonStyle.buttonColor; -ko-background-color: @bigButtonStyle.buttonColor;
                      -ko-border-radius: @[bigButtonStyle.radius]px;
                     -ko-font-size: @[bigButtonStyle.size]px; -ko-font-family: @bigButtonStyle.face; -ko-color: @bigButtonStyle.color; ">
