Change button text #3f3f3f to #ffffff

--- a/packages/mosaico/templates/versafix-1/template-versafix-1.html
+++ b/packages/mosaico/templates/versafix-1/template-versafix-1.html
@@ -567,12 +567,12 @@
                           <table cellpadding="0" border="0" align="left" cellspacing="0" class="mobile-full" style="padding-top: 4px">
                             <tr>
                               <td width="auto" valign="middle" bgcolor="#1a3867" align="center" height="26" 
-                                style="font-size: 13px; font-family: Arial, Helvetica, sans-serif; text-align:center; color: #3f3f3f; font-weight: normal;
+                                style="font-size: 13px; font-family: Arial, Helvetica, sans-serif; text-align:center; color: #ffffff; font-weight: normal;
                                 padding-left: 18px; padding-right: 18px; background-color: #1a3867; border-radius: 4px;
                                 -ko-border-radius: @[buttonStyle.radius]px;
                                 -ko-attr-bgcolor: @buttonStyle.buttonColor; -ko-background-color: @buttonStyle.buttonColor;
                                 -ko-font-size: @[buttonStyle.size]px; -ko-font-family: @buttonStyle.face; -ko-color: @buttonStyle.color;">
-                                <a data-ko-editable="buttonLink.text" href="" style="text-decoration: none; color: #3f3f3f; font-weight: normal;
+                                <a data-ko-editable="buttonLink.text" href="" style="text-decoration: none; color: #ffffff; font-weight: normal;
                                   -ko-color: @buttonStyle.color; -ko-attr-href: @buttonLink.url">BUTTON</a>
                               </td>
                             </tr>
@@ -660,12 +660,12 @@
                 <table cellpadding="0" border="0" align="left" cellspacing="0" class="mobile-full">
                   <tr>
                     <td width="auto" valign="middle" bgcolor="#1a3867" align="center" height="26" 
-                      style="font-size: 13px; font-family: Arial, Helvetica, sans-serif; text-align:center; color: #3f3f3f; font-weight: normal;
+                      style="font-size: 13px; font-family: Arial, Helvetica, sans-serif; text-align:center; color: #ffffff; font-weight: normal;
                       padding-left: 18px; padding-right: 18px; background-color: #1a3867; border-radius: 4px;
                       -ko-border-radius: @[buttonStyle.radius]px;
                       -ko-attr-bgcolor: @buttonStyle.buttonColor; -ko-background-color: @buttonStyle.buttonColor;
                       -ko-font-size: @[buttonStyle.size]px; -ko-font-family: @buttonStyle.face; -ko-color: @buttonStyle.color; ">
-                      <a data-ko-editable="buttonLink.text" href="" style="text-decoration: none; color: #3f3f3f; font-weight: normal;
+                      <a data-ko-editable="buttonLink.text" href="" style="text-decoration: none; color: #ffffff; font-weight: normal;
                         -ko-color: @buttonStyle.color; -ko-attr-href: @buttonLink.url">BUTTON</a>
                     </td>
                   </tr>
@@ -783,12 +783,12 @@
                           <table cellpadding="0" border="0" align="left" cellspacing="0" class="mobile-full" style="padding-top: 4px">
                             <tr>
                               <td width="auto" valign="middle" bgcolor="#1a3867" align="center" height="26" 
-                                style="font-size: 13px; font-family: Arial, Helvetica, sans-serif; text-align:center; color: #3f3f3f; font-weight: normal;
+                                style="font-size: 13px; font-family: Arial, Helvetica, sans-serif; text-align:center; color: #ffffff; font-weight: normal;
                                 padding-left: 18px; padding-right: 18px; background-color: #1a3867; border-radius: 4px;
                                 -ko-border-radius: @[buttonStyle.radius]px;
                                 -ko-attr-bgcolor: @buttonStyle.buttonColor; -ko-background-color: @buttonStyle.buttonColor;
                                 -ko-font-size: @[buttonStyle.size]px; -ko-font-family: @buttonStyle.face; -ko-color: @buttonStyle.color; ">
-                                <a data-ko-editable="leftButtonLink.text" href="" style="text-decoration: none; color: #3f3f3f; font-weight: normal;
+                                <a data-ko-editable="leftButtonLink.text" href="" style="text-decoration: none; color: #ffffff; font-weight: normal;
                                   -ko-color: @buttonStyle.color; -ko-attr-href: @leftButtonLink.url">BUTTON</a>
                               </td>
                             </tr>
@@ -832,12 +832,12 @@
                           <table cellpadding="0" border="0" align="left" cellspacing="0" class="mobile-full" style="padding-top: 4px">
                             <tr>
                               <td width="auto" valign="middle" bgcolor="#1a3867" align="center" height="26" 
-                                style="font-size: 13px; font-family: Arial, Helvetica, sans-serif; text-align:center; color: #3f3f3f; font-weight: normal;
+                                style="font-size: 13px; font-family: Arial, Helvetica, sans-serif; text-align:center; color: #ffffff; font-weight: normal;
                                 padding-left: 18px; padding-right: 18px; background-color: #1a3867; border-radius: 4px;
                                 -ko-border-radius: @[buttonStyle.radius]px;
                                 -ko-attr-bgcolor: @buttonStyle.buttonColor; -ko-background-color: @buttonStyle.buttonColor;
                                 -ko-font-size: @[buttonStyle.size]px; -ko-font-family: @buttonStyle.face; -ko-color: @buttonStyle.color; ">
-                                <a data-ko-editable="middleButtonLink.text" href="" style="text-decoration: none; color: #3f3f3f; font-weight: normal;
+                                <a data-ko-editable="middleButtonLink.text" href="" style="text-decoration: none; color: #ffffff; font-weight: normal;
                                   -ko-color: @buttonStyle.color; -ko-attr-href: @middleButtonLink.url">BUTTON</a>
                               </td>
                             </tr>
@@ -881,12 +881,12 @@
                           <table cellpadding="0" border="0" align="left" cellspacing="0" class="mobile-full" style="padding-top: 4px">
                             <tr>
                               <td width="auto" valign="middle" bgcolor="#1a3867" align="center" height="26" 
-                                style="font-size: 13px; font-family: Arial, Helvetica, sans-serif; text-align:center; color: #3f3f3f; font-weight: normal;
+                                style="font-size: 13px; font-family: Arial, Helvetica, sans-serif; text-align:center; color: #ffffff; font-weight: normal;
                                 padding-left: 18px; padding-right: 18px; background-color: #1a3867; border-radius: 4px;
                                 -ko-border-radius: @[buttonStyle.radius]px;
                                 -ko-attr-bgcolor: @buttonStyle.buttonColor; -ko-background-color: @buttonStyle.buttonColor;
                                 -ko-font-size: @[buttonStyle.size]px; -ko-font-family: @buttonStyle.face; -ko-color: @buttonStyle.color;">
-                                <a data-ko-editable="rightButtonLink.text" href="" style="text-decoration: none; color: #3f3f3f; font-weight: normal;
+                                <a data-ko-editable="rightButtonLink.text" href="" style="text-decoration: none; color: #ffffff; font-weight: normal;
                                   -ko-color: @buttonStyle.color; -ko-attr-href: @rightButtonLink.url">BUTTON</a>
                               </td>
                             </tr>
@@ -958,12 +958,12 @@
                           <table cellpadding="0" border="0" align="left" cellspacing="0" class="mobile-full" style="padding-top: 4px;">
                             <tr>
                               <td width="auto" valign="middle" bgcolor="#1a3867" align="center" height="26" 
-                                style="font-size: 13px; font-family: Arial, Helvetica, sans-serif; text-align:center; color: #3f3f3f; font-weight: normal;
+                                style="font-size: 13px; font-family: Arial, Helvetica, sans-serif; text-align:center; color: #ffffff; font-weight: normal;
                                 padding-left: 18px; padding-right: 18px; background-color: #1a3867; border-radius: 4px;
                                 -ko-border-radius: @[buttonStyle.radius]px;
                                 -ko-attr-bgcolor: @buttonStyle.buttonColor; -ko-background-color: @buttonStyle.buttonColor;
                                 -ko-font-size: @[buttonStyle.size]px; -ko-font-family: @buttonStyle.face; -ko-color: @buttonStyle.color; ">
-                                <a data-ko-editable="leftButtonLink.text" href="" style="text-decoration: none; color: #3f3f3f; font-weight: normal;
+                                <a data-ko-editable="leftButtonLink.text" href="" style="text-decoration: none; color: #ffffff; font-weight: normal;
                                   -ko-color: @buttonStyle.color; -ko-attr-href: @leftButtonLink.url">BUTTON</a>
                               </td>
                             </tr>
@@ -1007,12 +1007,12 @@
                           <table cellpadding="0" border="0" align="left" cellspacing="0" class="mobile-full" style="padding-top: 4px;">
                             <tr>
                               <td width="auto" valign="middle" bgcolor="#1a3867" align="center" height="26" 
-                                style="font-size: 13px; font-family: Arial, Helvetica, sans-serif; text-align:center; color: #3f3f3f; font-weight: normal;
+                                style="font-size: 13px; font-family: Arial, Helvetica, sans-serif; text-align:center; color: #ffffff; font-weight: normal;
                                 padding-left: 18px; padding-right: 18px; background-color: #1a3867; border-radius: 4px;
                                 -ko-border-radius: @[buttonStyle.radius]px;
                                 -ko-attr-bgcolor: @buttonStyle.buttonColor; -ko-background-color: @buttonStyle.buttonColor;
                                 -ko-font-size: @[buttonStyle.size]px; -ko-font-family: @buttonStyle.face; -ko-color: @buttonStyle.color; ">
-                                <a data-ko-editable="rightButtonLink.text" href="" style="text-decoration: none; color: #3f3f3f; font-weight: normal;
+                                <a data-ko-editable="rightButtonLink.text" href="" style="text-decoration: none; color: #ffffff; font-weight: normal;
                                   -ko-color: @buttonStyle.color; -ko-attr-href: @rightButtonLink.url">BUTTON</a>
                               </td>
                             </tr>
@@ -1084,12 +1084,12 @@
               <table cellpadding="0" border="0" align="center" cellspacing="0" class="mobile-full">
                 <tr>
                   <td width="auto" valign="middle" bgcolor="#1a3867" align="center" height="50" 
-                    style="font-size:22px; font-family: Arial, Helvetica, sans-serif; color: #3f3f3f; font-weight: normal;
+                    style="font-size:22px; font-family: Arial, Helvetica, sans-serif; color: #ffffff; font-weight: normal;
                     padding-left: 14px; padding-right: 14px; background-color: #1a3867; border-radius: 4px;
                     -ko-attr-bgcolor: @bigButtonStyle.buttonColor; -ko-background-color: @bigButtonStyle.buttonColor;
                      -ko-border-radius: @[bigButtonStyle.radius]px;
                     -ko-font-size: @[bigButtonStyle.size]px; -ko-font-family: @bigButtonStyle.face; -ko-color: @bigButtonStyle.color; ">
-                    <a data-ko-link="link.url" data-ko-editable="link.text" href="" style="text-decoration: none; color: #3f3f3f; font-weight: normal;
+                    <a data-ko-link="link.url" data-ko-editable="link.text" href="" style="text-decoration: none; color: #ffffff; font-weight: normal;
                       -ko-color: @bigButtonStyle.color;">BUTTON</a>
                   </td>
                 </tr>
