--- a/packages/mosaico/templates/versafix-1/template-versafix-1.html
+++ b/packages/mosaico/templates/versafix-1/template-versafix-1.html
@@ -407,10 +407,10 @@
   <div data-ko-display="preheaderVisible" data-ko-wrap="false">
 
   <table class="vb-outer" width="100%" cellpadding="0" border="0" cellspacing="0" bgcolor="#ffffff"
-    style="background-color: #ffffff; -ko-background-color: @backgroundColor; -ko-attr-bgcolor: @backgroundColor" data-ko-block="preheaderBlock">
+    style="background-color: #ffffff;" data-ko-block="preheaderBlock">
     <tr>
       <td class="vb-outer" align="center" valign="top" bgcolor="#ffffff"
-        style="background-color: #ffffff; -ko-background-color: @backgroundColor; -ko-attr-bgcolor: @backgroundColor">
+        style="background-color: #ffffff;">
         <div style="display: none; font-size:1px; color: #333333; line-height: 1px; max-height:0px; max-width: 0px; opacity: 0; overflow: hidden; 
           -ko-bind-text: @preheaderText"></div>
 
@@ -691,11 +691,11 @@
 <!--[if (gte mso 9)|(lte ie 8)]><table align="center" border="0" cellspacing="0" cellpadding="0" width="570"><tr><td align="center" valign="top"><![endif]-->
         <div class="oldwebkit">
         <table width="570" border="0" cellpadding="0" cellspacing="9" class="vb-container halfpad" bgcolor="#1e9dd8" 
-          style="width: 100%; max-width: 570px; background-color: #1e9dd8; -ko-attr-bgcolor: @backgroundColor; -ko-background-color: @backgroundColor;">
+          style="width: 100%; max-width: 570px; background-color: #1e9dd8;">
           <tr>
             <td bgcolor="#1e9dd8" align="center" 
               style="background-color: #1e9dd8; font-size: 22px; font-family: Arial, Helvetica, sans-serif; color: #ffffff; text-align: center;
-              -ko-attr-align: @bigTitleStyle.align; -ko-attr-bgcolor: @backgroundColor; -ko-background-color: @backgroundColor;
+              -ko-attr-align: @bigTitleStyle.align;
               -ko-font-size: @[bigTitleStyle.size]px; -ko-font-family: @bigTitleStyle.face; -ko-color: @bigTitleStyle.color; -ko-text-align: @bigTitleStyle.align">
               <span data-ko-editable="text">Section Title</span>
             </td>
@@ -1365,10 +1365,9 @@
 
   <!-- socialBlock -->
   <table width="100%" cellpadding="0" border="0" cellspacing="0" bgcolor="#3f3f3f"
-    style="background-color: #3f3f3f; -ko-background-color: @backgroundColor; -ko-attr-bgcolor: @backgroundColor"  data-ko-block="socialBlock">
+    style="background-color: #3f3f3f;"  data-ko-block="socialBlock">
     <tr>
-      <td align="center" valign="top" bgcolor="#3f3f3f" style="background-color: #3f3f3f;
-        -ko-attr-bgcolor: @backgroundColor; -ko-background-color: @backgroundColor;">
+      <td align="center" valign="top" bgcolor="#3f3f3f" style="background-color: #3f3f3f;">
 <!--[if (gte mso 9)|(lte ie 8)]><table align="center" border="0" cellspacing="0" cellpadding="0" width="570"><tr><td align="center" valign="top"><![endif]-->
         <div class="oldwebkit">
         <table width="570" style="width: 100%; max-width: 570px" border="0" cellpadding="0" cellspacing="9" class="vb-row fullpad" align="center">
