Set link color to #02426f

--- a/packages/mosaico/templates/versafix-1/template-versafix-1.html
+++ b/packages/mosaico/templates/versafix-1/template-versafix-1.html
@@ -290,7 +290,7 @@
     [data-ko-block=tripleArticleBlock] .links-color a:link, 
     [data-ko-block=tripleArticleBlock] .links-color a:visited,
     [data-ko-block=tripleArticleBlock] .links-color a:hover {
-      color: #3f3f3f;
+      color: #02426f;
       -ko-color: @longTextStyle.linksColor;
       text-decoration: underline;
     }
@@ -302,7 +302,7 @@
     [data-ko-block=doubleArticleBlock] .links-color a:link, 
     [data-ko-block=doubleArticleBlock] .links-color a:visited,
     [data-ko-block=doubleArticleBlock] .links-color a:hover {
-      color: #3f3f3f;
+      color: #02426f;
       -ko-color: @longTextStyle.linksColor;
       text-decoration: underline;
     }
@@ -314,7 +314,7 @@
     [data-ko-block=singleArticleBlock] .links-color a:link, 
     [data-ko-block=singleArticleBlock] .links-color a:visited,
     [data-ko-block=singleArticleBlock] .links-color a:hover {
-      color: #3f3f3f;
+      color: #02426f;
       -ko-color: @longTextStyle.linksColor;
       text-decoration: underline;
     }
@@ -326,7 +326,7 @@
     [data-ko-block=textBlock] .links-color a:link, 
     [data-ko-block=textBlock] .links-color a:visited,
     [data-ko-block=textBlock] .links-color a:hover {
-      color: #3f3f3f;
+      color: #02426f;
       -ko-color: @longTextStyle.linksColor;
       text-decoration: underline;
     }
@@ -338,7 +338,7 @@
     [data-ko-block=sideArticleBlock] .links-color a:link, 
     [data-ko-block=sideArticleBlock] .links-color a:visited,
     [data-ko-block=sideArticleBlock] .links-color a:hover {
-      color: #3f3f3f;
+      color: #02426f;
       -ko-color: @longTextStyle.linksColor;
       text-decoration: underline;
     }
@@ -374,7 +374,7 @@
     [data-ko-block=doubleImageBlock] a:link,
     [data-ko-block=doubleImageBlock] a:visited,
     [data-ko-block=doubleImageBlock] a:hover {
-      color: #3f3f3f;
+      color: #02426f;
       -ko-color: @longTextStyle.linksColor;
       text-decoration: underline;
     }
@@ -382,7 +382,7 @@
     [data-ko-block=tripleImageBlock] a:link,
     [data-ko-block=tripleImageBlock] a:visited,
     [data-ko-block=tripleImageBlock] a:hover {
-      color: #3f3f3f;
+      color: #02426f;
       -ko-color: @longTextStyle.linksColor;
       text-decoration: underline;
     }
@@ -390,7 +390,7 @@
     [data-ko-block=imageBlock] a:link,
     [data-ko-block=imageBlock] a:visited,
     [data-ko-block=imageBlock] a:hover {
-      color: #3f3f3f;
+      color: #02426f;
       -ko-color: @longTextStyle.linksColor;
       text-decoration: underline;
     }
